--- a/UI.portfolio/views/Main1.storyboard
+++ b/UI.portfolio/views/Main1.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CqG-1a-B3T">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CqG-1a-B3T">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -36,6 +36,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="Reverse"/>
+                                <connections>
+                                    <segue destination="Mqf-eX-qrA" kind="show" id="SIT-3I-Ce9"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Main Storyboard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tns-or-6LJ">
                                 <rect key="frame" x="84" y="77" width="247" height="42"/>
@@ -49,36 +52,54 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="Histogram"/>
+                                <connections>
+                                    <segue destination="ZW4-76-B3A" kind="show" id="f4y-Kl-Cpi"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="053-84-n2D">
                                 <rect key="frame" x="158" y="326" width="109" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="Translate"/>
+                                <connections>
+                                    <segue destination="HaZ-6x-xhA" kind="show" id="CPS-Oq-DXX"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kSh-sV-pGN">
                                 <rect key="frame" x="143" y="405" width="140" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="AlgoSearch"/>
+                                <connections>
+                                    <segue destination="7ci-qK-rGG" kind="show" id="apD-HM-YbH"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sip-9w-pD7">
                                 <rect key="frame" x="145" y="486" width="137" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="Pythagoras"/>
+                                <connections>
+                                    <segue destination="fr1-3a-8oP" kind="show" id="EBO-pI-B5N"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vUl-MP-CaF">
                                 <rect key="frame" x="151" y="563" width="123" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="Calculator"/>
+                                <connections>
+                                    <segue destination="JKg-1h-zNd" kind="show" id="tZW-J5-NZo"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ln6-Ut-wLf">
                                 <rect key="frame" x="175" y="628" width="77" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="File.IO"/>
+                                <connections>
+                                    <segue destination="iig-OY-T9O" kind="show" id="6hP-qD-G6h"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Xy-AP-CAB">
                                 <rect key="frame" x="188" y="682" width="51" height="46"/>
@@ -87,6 +108,15 @@
                                 <state key="normal" title="Golf"/>
                                 <connections>
                                     <segue destination="8Of-NH-DnI" kind="show" id="pH7-YQ-Mdx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Um-FK-2jr">
+                                <rect key="frame" x="164" y="727" width="108" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <state key="normal" title="Card Game"/>
+                                <connections>
+                                    <segue destination="sGq-8d-Gws" kind="show" id="euS-6i-1qe"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -99,6 +129,76 @@
             </objects>
             <point key="canvasLocation" x="286.95652173913044" y="184.82142857142856"/>
         </scene>
+        <!--reverseword-->
+        <scene sceneID="k2E-ZI-77C">
+            <objects>
+                <viewControllerPlaceholder storyboardName="reverseword" id="Mqf-eX-qrA" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="Jsj-oE-LZo"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MYJ-mD-fFv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="780" y="12"/>
+        </scene>
+        <!--Histogram-->
+        <scene sceneID="5vw-Ho-vFI">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Histogram" id="ZW4-76-B3A" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="SHr-Nr-Zzw"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kdz-4Q-cMw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="779" y="72"/>
+        </scene>
+        <!--translate-->
+        <scene sceneID="pkX-ke-R8b">
+            <objects>
+                <viewControllerPlaceholder storyboardName="translate" id="HaZ-6x-xhA" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="I4I-YT-YbB"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CHZ-q5-eKV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="783" y="118"/>
+        </scene>
+        <!--AlgoSearch1-->
+        <scene sceneID="2Mz-EK-gll">
+            <objects>
+                <viewControllerPlaceholder storyboardName="AlgoSearch1" id="7ci-qK-rGG" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="j3y-7J-vrV"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PCP-NK-WmV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="782" y="185"/>
+        </scene>
+        <!--Pythagoras-->
+        <scene sceneID="yqG-bl-uig">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Pythagoras" id="fr1-3a-8oP" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="8Ky-xe-cak"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uWS-q9-50L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="782" y="223"/>
+        </scene>
+        <!--Calculator-->
+        <scene sceneID="9kz-8O-yJn">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Calculator" id="JKg-1h-zNd" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="D3n-8J-zh8"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bri-lz-VgZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="821" y="288"/>
+        </scene>
+        <!--FileIO-->
+        <scene sceneID="mtx-q5-bW1">
+            <objects>
+                <viewControllerPlaceholder storyboardName="FileIO" id="iig-OY-T9O" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="n7q-3M-erM"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EQl-af-tBU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="801" y="321"/>
+        </scene>
         <!--golf-->
         <scene sceneID="tj0-BY-2lO">
             <objects>
@@ -107,7 +207,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rce-wc-GyS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="907" y="383"/>
+            <point key="canvasLocation" x="793" y="356"/>
+        </scene>
+        <!--card-->
+        <scene sceneID="3DR-9h-W1O">
+            <objects>
+                <viewControllerPlaceholder storyboardName="card" id="sGq-8d-Gws" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="BXF-4W-yu3"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NFl-VA-7Dl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="796" y="403"/>
         </scene>
     </scenes>
 </document>
